--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,22 @@
         <testng.version>6.8.21</testng.version>
     </properties>
 
+    <profiles>
+    <profile>
+        <id>firefox_local</id>
+        <properties>
+            <browser.name>firefox</browser.name>
+        </properties>
+    </profile>
+    <profile>
+        <id>chrome_local</id>
+        <properties>
+            <browser.name>chrome</browser.name>
+        </properties>
+    </profile>
+    </profiles>
+
+
 <dependencies>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
