--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <selenium.version>2.45.0</selenium.version>
         <testng.version>6.8.21</testng.version>
+        <logger.version>1.0.13</logger.version>
     </properties>
 
     <profiles>
@@ -42,6 +43,23 @@
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
         </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logger.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logger.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.5</version>
+    </dependency>
 
     </dependencies>
 <build>
